Run openshift tests serially and not parallely for patched cluster
Signed-off-by: Avishkar Gupta <avgupta@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ origin.iml
 .project
 *.go~
 .envrc
+*.code-workspace
 # To workaround go-git problem in publishing bots
 vendor/github.com/prometheus/procfs/fixtures/26231/exe
